# x_tender_proposal

./: .gitignore  03+Few+Shot+Prompt+Templates+_+往提示里面塞例子.ipynb  README.md  cloned_chatgpt.py  content_app.py  dashboard.py  few_shot_example.py  generate_content.py  generate_content_v2.py  generate_content_v2_2.py  generate_content_v2_3.py  generate_content_v2_4.py  generate_outline.py  generate_outline_v2.py  generate_section.py  home.py  human_feedback.py  loader_example.py  logger_config.py  outline_app.py  pyproject.toml  qwen.py  sandbox.py  sandbox2.json  sandbox2.py  sandbox3.py  sandbox_2_app.py  sandbox_3_app.py  sandbox_app.py  sandbox_human_feedback_app.py  sandbox_summarizaiton_app.py  section_app.py  streamlit_app.py  text_to_image.py
.streamlit/: config.toml
files/: review_draft.docx  tender_document_20241212_103529.docx  tender_document_20241212_104753.docx  tender_document_20241212_115851.docx  tender_document_20241213_172439.docx  tender_section_20241212_105525.docx  tender_section_20241212_120051.docx  tender_section_20241213_173315.docx  tender_section_20241217_160537.docx  tender_section_20241217_160810.docx  tender_section_20241217_161434.docx  tender_section_20241217_161959.docx  tender_section_20241217_162411.docx  tender_section_20241217_190445.docx  tender_section_20241217_190912.docx  tender_section_20241217_191154.docx  tender_section_20241218_095609.docx  tender_section_20241218_115859.docx  tender_section_20241219_115409.docx  tender_section_20241219_120256.docx
x_content/graph/: graph.py  state.py
x_content_v2/graph/: graph.py  state.py
(+134 files in other folders)
